--- a/Transfer.Web/Views/Bus/Save.cshtml
+++ b/Transfer.Web/Views/Bus/Save.cshtml
@@ -293,7 +293,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-p-u @(Model.Photo1.IsNullOrEmpty() ? "d-none" : string.Empty)">
-                            <div class="col-p-u-i" style="border: 1px dashed #007896; height: 200px; border-radius: 9px; background-position: center center; background-size: cover; background-image: url('/File/GetFile?fileId=@Model.Photo1.Value'">
+                            <div class="col-p-u-i" style="border: 1px dashed #007896; height: 200px; border-radius: 9px; background-position: center center; background-size: cover; background-image: url('/File/GetFile?fileId=@Model.Photo1'">
                                 <a href="javascript:void(0);" class="i-button" onclick="DeleteFile(this)"><div class="add-photo-link"><i class="fas fa-times-circle"></i></div></a>
                             </div>
                         </div>
@@ -308,7 +308,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-p-u @(Model.Photo2.IsNullOrEmpty() ? "d-none" : string.Empty)">
-                            <div class="col-p-u-i" style="border: 1px dashed #007896; height: 200px; border-radius: 9px; background-position: center center; background-size: cover; background-image: url('/File/GetFile?fileId=@Model.Photo2.Value'">
+                            <div class="col-p-u-i" style="border: 1px dashed #007896; height: 200px; border-radius: 9px; background-position: center center; background-size: cover; background-image: url('/File/GetFile?fileId=@Model.Photo2'">
                                 <a href="javascript:void(0);" class="i-button" onclick="DeleteFile(this)"><div class="add-photo-link"><i class="fas fa-times-circle"></i></div></a>
                             </div>
                         </div>
@@ -323,7 +323,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-p-u @(Model.Photo3.IsNullOrEmpty() ? "d-none" : string.Empty)">
-                            <div class="col-p-u-i" style="border: 1px dashed #007896; height: 200px; border-radius: 9px; background-position: center center; background-size: cover; background-image: url('/File/GetFile?fileId=@Model.Photo3.Value'">
+                            <div class="col-p-u-i" style="border: 1px dashed #007896; height: 200px; border-radius: 9px; background-position: center center; background-size: cover; background-image: url('/File/GetFile?fileId=@Model.Photo3'">
                                 <a href="javascript:void(0);" class="i-button" onclick="DeleteFile(this)"><div class="add-photo-link"><i class="fas fa-times-circle"></i></div></a>
                             </div>
                         </div>
@@ -338,7 +338,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-p-u @(Model.Photo4.IsNullOrEmpty() ? "d-none" : string.Empty)">
-                            <div class="col-p-u-i" style="border: 1px dashed #007896; height: 200px; border-radius: 9px; background-position: center center; background-size: cover; background-image: url('/File/GetFile?fileId=@Model.Photo4.Value'">
+                            <div class="col-p-u-i" style="border: 1px dashed #007896; height: 200px; border-radius: 9px; background-position: center center; background-size: cover; background-image: url('/File/GetFile?fileId=@Model.Photo4'">
                                 <a href="javascript:void(0);" class="i-button" onclick="DeleteFile(this)"><div class="add-photo-link"><i class="fas fa-times-circle"></i></div></a>
                             </div>
                         </div>
@@ -353,7 +353,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-p-u @(Model.Photo5.IsNullOrEmpty() ? "d-none" : string.Empty)">
-                            <div class="col-p-u-i" style="border: 1px dashed #007896; height: 200px; border-radius: 9px; background-position: center center; background-size: cover; background-image: url('/File/GetFile?fileId=@Model.Photo5.Value'">
+                            <div class="col-p-u-i" style="border: 1px dashed #007896; height: 200px; border-radius: 9px; background-position: center center; background-size: cover; background-image: url('/File/GetFile?fileId=@Model.Photo5'">
                                 <a href="javascript:void(0);" class="i-button" onclick="DeleteFile(this)"><div class="add-photo-link"><i class="fas fa-times-circle"></i></div></a>
                             </div>
                         </div>
@@ -368,7 +368,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-p-u @(Model.Photo6.IsNullOrEmpty() ? "d-none" : string.Empty)">
-                            <div class="col-p-u-i" style="border: 1px dashed #007896; height: 200px; border-radius: 9px; background-position: center center; background-size: cover; background-image: url('/File/GetFile?fileId=@Model.Photo6.Value'">
+                            <div class="col-p-u-i" style="border: 1px dashed #007896; height: 200px; border-radius: 9px; background-position: center center; background-size: cover; background-image: url('/File/GetFile?fileId=@Model.Photo6'">
                                 <a href="javascript:void(0);" class="i-button" onclick="DeleteFile(this)"><div class="add-photo-link"><i class="fas fa-times-circle"></i></div></a>
                             </div>
                         </div>
