--- a/Transfer.Web/wwwroot/css/TripRequest/Search.css
+++ b/Transfer.Web/wwwroot/css/TripRequest/Search.css
@@ -26,12 +26,26 @@
                 margin: auto;
             }
 
-.trip-request .r-logo img {
-    height: 140px;
-    width: auto;
-    border: 0;
-    padding: 0;
-    margin: 0;
+    .trip-request .r-logo img {
+        height: 140px;
+        width: auto;
+        border: 0;
+        padding: 0;
+        margin: 0;
+    }
+
+#TripRequestSearch .new-assert-link {
+    height: 72px;
+    width: 72px;
+    margin: auto;
+    line-height: 72px;
+    background-color: #ecbf54;
+    color: #007896;
+    border-radius: 18px;
+    border: solid 1px #ecbf54;
 }
 
-
+    #TripRequestSearch .new-assert-link:hover {
+        background-color: #fff;
+        border: solid 1px #007896;
+    }
