--- a/Transfer.Web/Views/Carrier/CarrierEdit.cshtml
+++ b/Transfer.Web/Views/Carrier/CarrierEdit.cshtml
@@ -1,16 +1,14 @@
 ﻿@model Transfer.Bl.Dto.Carrier.CarrierDto
 @using Transfer.Common.Extensions
 
-@{
-}
-
 @section Styles {
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.2.7/css/fileinput.min.css" integrity="sha512-qPjB0hQKYTx1Za9Xip5h0PXcxaR1cRbHuZHo9z+gb5IgM6ZOTtIH4QLITCxcCp/8RMXtw2Z85MIZLv6LfGTLiw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.2.7/css/fileinput.min.css" integrity="sha512-qPjB0hQKYTx1Za9Xip5h0PXcxaR1cRbHuZHo9z+gb5IgM6ZOTtIH4QLITCxcCp/8RMXtw2Z85MIZLv6LfGTLiw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 }
 
 @section Scripts {
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.2.7/js/fileinput.min.js" integrity="sha512-CCLv901EuJXf3k0OrE5qix8s2HaCDpjeBERR2wVHUwzEIc7jfiK9wqJFssyMOc1lJ/KvYKsDenzxbDTAQ4nh1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="~/js/Carrier/Save.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.2.7/js/fileinput.min.js" integrity="sha512-CCLv901EuJXf3k0OrE5qix8s2HaCDpjeBERR2wVHUwzEIc7jfiK9wqJFssyMOc1lJ/KvYKsDenzxbDTAQ4nh1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="~/js/Carrier/Save.js" crossorigin="anonymous"></script>
+<script src="~/js/BasicSave.js" crossorigin="anonymous"></script>
 }
 
 <div class="container">
@@ -45,7 +43,7 @@
         </div>
     </div>
     <div class="row blank-row"></div>
-    <form asp-controller="Carrier" asp-action="Save" method="post" enctype="multipart/form-data">
+    <form asp-controller="Carrier" asp-action="Save" method="post" enctype="multipart/form-data" id="mainSaveForm">
         @await Html.PartialAsync("~/Views/Carrier/Save.cshtml", Model)
     </form>
     <div class="row blank-row"></div>
