--- a/Transfer.Web/Views/Carrier/Save.cshtml
+++ b/Transfer.Web/Views/Carrier/Save.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Transfer.Bl.Dto.Carrier.CarrierDto
+@using Transfer.Common.Extensions
 
 @Html.AntiForgeryToken()
 @Html.HiddenFor(x => x.Id)
@@ -236,25 +237,50 @@
         </div>
     </div>
     <div class="row blank-row"></div>
-    @*<div class="row">
-        <div class="col-12 t-col" style="color: #fff;"><h3>Дополнительные документы</h3></div>
-        </div>
-        <div class="row blank-row"></div>
-        <div class="row form-row">
-        <div class="t-col col-6 form-group">
-        <div class="row">
-        <div class="t-col col-8">
-        <input asp-for="LicenceFileId" readonly="readonly" class="form-control" placeholder="Скан лицензии на осуществление перевозок" />
-        </div>
-        <div class="t-col col-4">
-        <input asp-for="LicenceFile" accept="image/*" />
-        </div>
-        </div>
-        </div>
-        <div class="t-col col-6 form-group text-center">
-        <input asp-for="LogoFile" class="file" data-msg-placeholder="Логотип компании" data-browse-label="Загрузить" data-show-upload="false" data-show-remove="false" data-show-preview="false" />
-        </div>
-        </div>*@
+            <div class="row">
+                <div class="col-12 col-md-8">
+                    <h2 class="white-text">Копии документов:</h2>
+                    <div class="row form-row">
+                        <input asp-for="LicenceFileId" type="hidden" class="file-result-id">
+                        <div class="t-col file-upl col-12 @(!Model.LicenceFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
+                            <div class="row">
+                                <div class="t-col col-12 white-text">
+                                    Скан лицензии на пассажирские перевозки: <span class="red-text">*</span>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="t-col col-10 form-group">
+                                    <input type="text" class="form-control file-result-name" readonly="readonly" />
+                                </div>
+                                <div class="t-col col-2 form-group">
+                                    <input type="file" class="form-control input-file">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="t-col file-dwn white-text col-12 form-group @(Model.LicenceFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
+                            Скан лицензии на пассажирские перевозки: <a href="/File/GetFile?fileId=@Model.LicenceFileId" target="_blank" class="dwn-link"><i class="fas fa-cloud-download-alt"></i> скачать</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:void(0);" onclick="DeleteFile(this)" class="dwn-link"><i class="fas fa-times"></i> удалить</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <h2 class="white-text">Логотип компании:</h2>
+                    <div class="row blank-row d-none d-md-block"></div>
+                    <div class="form-row">
+                        <input asp-for="LogoFileId" type="hidden" class="file-result-id">
+                        <div class="col-12 col-md-6 col-p-e @(!Model.LogoFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
+                            <div style="border: 1px dashed #007896; height: 200px; border-radius: 9px;">
+                                <input type="file" class="form-control input-photo-file">
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-p-u @(Model.LogoFileId.IsNullOrEmpty() ? "d-none" : string.Empty)">
+                            <div class="col-p-u-i" style="border: 1px dashed #007896; height: 200px; border-radius: 9px; background-position: center center; background-size: cover; background-image: url('/File/GetFile?fileId=@Model.LogoFileId'">
+                                <a href="javascript:void(0);" class="i-button" onclick="DeleteFile(this)"><div class="add-photo-link"><i class="fas fa-times-circle"></i></div></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row blank-row"></div>
     <div class="row form-row">
         <div class="t-col col-12 chk-label form-group">
             <input id="Agreement" asp-for="Agreement" class="form-check-input" />
